# bloch-mcconnell-splitter

./: .gitignore  BlochMcConnellSplitter.m  BlochMcConnellSplitter.py  LICENSE  README.md  TestBlochMcConnellSplitter.m  pyproject.toml  requirements-dev.txt  test_bloch_mcconnell_splitter.py
.github/workflows/: python-tests.yml
